force-app/main/default/objects/SK_ACH_Distribution__c/SK_ACH_Distribution__c.object-meta.xml
<CustomObject>
    <label>Distribution</label>
    <pluralLabel>Distributions</pluralLabel>
    <nameField>
        <displayFormat>DST-{0000}</displayFormat>
        <label>Distribution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>