force-app/main/default/objects/SK_ACH_Distribution__c/fields/SK_ACH_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Approval_Date__c</fullName>
    <label>Approval Date</label>
    <description>Date distribution was approved</description>
    <type>Date</type>
</CustomField>