force-app/main/default/objects/SK_ACH_Distribution__c/fields/SK_ACH_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Approved_By__c</fullName>
    <label>Approved By</label>
    <description>User who approved distribution</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_Distributions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>