force-app/main/default/objects/SK_ACH_Distribution__c/fields/SK_ACH_Carried_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Carried_Interest_Amount__c</fullName>
    <description>Carried interest to GP</description>
    <label>Carried Interest Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>