force-app/main/default/objects/SK_ACH_Distribution__c/fields/SK_ACH_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Distribution_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date distribution is paid</description>
    <label>Distribution Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>