force-app/main/default/objects/SK_ACH_Distribution__c/fields/SK_ACH_Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Distribution_Type__c</fullName>
    <label>Distribution Type</label>
    <description>Type of distribution</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Return of Capital</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Preferred Return</fullName>
            </value>
            <value>
                <fullName>Profit Distribution</fullName>
            </value>
            <value>
                <fullName>Special Distribution</fullName>
            </value>
            <value>
                <fullName>Liquidating Distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>