force-app/main/default/objects/SK_ACH_Distribution__c/fields/SK_ACH_Fund__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Fund__c</fullName>
    <label>Fund</label>
    <description>Fund making the distribution</description>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>SK_ACH_Fund__c</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>