force-app/main/default/objects/SK_ACH_Distribution__c/fields/SK_ACH_GP_Catch_Up_Amount__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_GP_Catch_Up_Amount__c</fullName>
    <label>GP Catch-Up Amount</label>
    <description>GP catch-up amount</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>