force-app/main/default/objects/SK_ACH_Distribution__c/fields/SK_ACH_Preferred_Return_Amount__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Preferred_Return_Amount__c</fullName>
    <description>Portion allocated to preferred return</description>
    <label>Preferred Return Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>