force-app/main/default/objects/SK_ACH_Distribution__c/fields/SK_ACH_Return_of_Capital_Amount__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Return_of_Capital_Amount__c</fullName>
    <description>Portion allocated to return of capital</description>
    <label>Return of Capital Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>