force-app/main/default/objects/SK_ACH_Distribution__c/fields/SK_ACH_Source_Investment__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Source_Investment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Investment that generated proceeds</description>
    <label>Source Investment</label>
    <referenceTo>SK_ACH_Investment__c</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>