force-app/main/default/objects/SK_ACH_Distribution__c/validationRules/Distribution_Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Distribution_Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Distribution total amount must be greater than zero</description>
    <errorConditionFormula>SK_ACH_Distribution_Total_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Distribution amount must be greater than zero.</errorMessage>
</ValidationRule>